--- a/resources/generic-page.html.mustache
+++ b/resources/generic-page.html.mustache
@@ -21,6 +21,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
+
+     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
   </head>
   <style>
     figure {
