--- a/resources/generic-page.html.mustache
+++ b/resources/generic-page.html.mustache
@@ -43,6 +43,10 @@
   <body>
     <div id="content" class="container">
 
+      <h2>New Thing</h2>
+
+      <div id="meter"></div>
+
       <h1>MQTT Console</h1>
 
       <figure>
